--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -70,7 +70,7 @@
     #4 \\
 }
 % END RESUME DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%
-
+\setlist[itemize]{noitemsep, nolistsep}
 \begin{document}
 \vspace*{-40pt}
 
@@ -84,13 +84,13 @@
 \header{Work and Research Experience}
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill June 2022 --- Present \\
-\begin{itemize}[noitemsep,nolistsep]
+\begin{itemize}
     \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; internal IT support
 \end{itemize}    
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Research Assistant} \hfill Aug 2020 --- May 2022 \\
-\begin{itemize}[noitemsep,nolistsep]
+\begin{itemize}
     \item Edited and revised book chapters and journal articles; compiled relevant literature for publications
 \end{itemize}
 
@@ -99,19 +99,19 @@
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill Sep 2018 --- Dec 2018\\
-\begin{itemize}[noitemsep, nolistsep]
+\begin{itemize}
     \item Researched master's thesis: economic analysis of open-source communities
 \end{itemize}
 
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill Jan 2017 --- May 2017\\
-\begin{itemize}[noitemsep,nolistsep]
+\begin{itemize}
     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies; wrote and edited two publications per week related to the Pennsylvania's budget and education policy; responded to email inquiries related to subsidies, right-to-work laws, and the state budget
 \end{itemize}
 
 \textbf{Cato Institute} \hfill Washington, D.C.\\
 \textit{Intern Researcher at the Center for Educational Freedom} \hfill Sep 2016 --- Dec 2016\\
-\begin{itemize}[noitemsep,nolistsep]
+\begin{itemize}
     \item Collected and analyzed datasets related to national education policy; wrote reports from Capitol Hill briefings on foreign affairs, trade, monetary, and education policy; produced over 200 social media posts 
 \end{itemize}
 \vspace{1mm}
@@ -120,13 +120,13 @@
 \header{Education}
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics}; 3.595 GPA \hfill May 2022 \\
-\begin{itemize}[noitemsep,nolistsep]
+\begin{itemize}
     \item Relevant Coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
 
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
 \textit{M.A. Political Science, Philosophy, and Economics (PPE)} \hfill Jun 2019\\
-\begin{itemize}[noitemsep,nolistsep]
+\begin{itemize}
     \item Recipient of \href{http://www.cevroinstitut.cz/en/article/scholarships/}{Full Tuition Excellence Scholarship}
 \end{itemize}
 
@@ -136,7 +136,7 @@
 \vspace{1mm}
 %==== Certificates ====%
 \header{Certifications}
-\begin{itemize}[noitemsep,nolistsep]
+\begin{itemize}
     \item Applied Text Mining in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill Dec 2022
     \item Applied Machine Learning in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill Nov 2022
     \item Applied Plotting, Charting \& Data Representation in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill Oct 2022
