--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -79,7 +79,7 @@
 %==== Profile ====%
 \vspace*{-10pt}
 \begin{center}
-    {\Huge \scshape \textbf{{Don Lim}}}\\
+    {\Huge\textbf\textsc{{{Don Lim}}}}\\
     \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{donlim93.github.io} \\
 \end{center}
 %==== Experience ====%
@@ -139,11 +139,11 @@
 %==== Certificates ====%
 \header{Certifications}
 \begin{itemize}
-    \item Applied Text Mining in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill Dec 2022
-    \item Applied Machine Learning in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill Nov 2022
-    \item Applied Plotting, Charting \& Data Representation in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill Oct 2022
-    \item Introduction to Data Science in Python; \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/UHKNPYG352ZU}{UHKNPYG352ZU}) \hfill Sep 2022
-    \item Introduction to SQL; \emph{Coursera} (\href{https://coursera.org/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
+    \item Applied Text Mining in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W}{WXVAJP7YR94W}) \hfill Dec 2022
+    \item Applied Machine Learning in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/V6RMP4DBA5XN}{V6RMP4DBA5XN}) \hfill Nov 2022
+    \item Applied Plotting, Charting \& Data Representation in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/MR6CRKMGMLF8}{MR6CRKMGMLF8}) \hfill Oct 2022
+    \item Introduction to Data Science in Python - \emph{Coursera} (\href{https://www.coursera.org/account/accomplishments/certificate/UHKNPYG352ZU}{UHKNPYG352ZU}) \hfill Sep 2022
+    \item Introduction to SQL - \emph{Coursera} (\href{https://coursera.org/verify/GA25HJ4B4XRD}{GA25HJ4B4XRD}) \hfill Dec 2021
 \end{itemize}
 \vspace{1mm}
 %==== Professional and Academic Development ====%
@@ -155,14 +155,16 @@ State Policy Network Generation Liberty Fellow \hfill Colorado Springs, CO | Oct
 
 Epistemological and Methodological Approaches in Science \hfill Tallahassee, FL | Aug 2018\\
 
-Freidrich Naumann Stiftung Seminar \hfill Gummersbach, Germany | Jul 2018\\
+Freidrich Naumann Stiftung Seminar \hfill Gummersbach, Germany | Jul 2018 \\
 
 European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \\
+
+Koch Internship Program \hfill Online | Jan 2016 --- May 2017
 
 \vspace{1mm}
 %==== Skills ====%
 \header{Skills}
-Technical languages: Python (regex, numpy, pandas, scipy, matplotlib, sklearn, nltk, networkx), SAS, R (dplyr, tidyr, stringr, ggplot2), Stata, HTML5, CSS, \LaTeX \\
+Technical languages: Python (regex, numpy, pandas, scikit-learn, matplotlib, nltk, networkx), SAS, R (dplyr, tidyr, stringr, ggplot2), Stata, HTML5, CSS, \LaTeX, SQL \\
 
 Statistical techniques: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis
 
