--- a/python/Coursera/1 Intro to Data Science/Assignments/Assignment 1/assignment1.ipynb
+++ b/python/Coursera/1 Intro to Data Science/Assignments/Assignment 1/assignment1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -101,13 +101,12 @@
     "    # YOUR CODE HERE\n",
     "    pattern = '[A-Z][a-z]*'\n",
     "    result = re.findall(pattern,simple_string)\n",
-    "    return result\n",
-    "    "
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -123,7 +122,7 @@
    },
    "outputs": [],
    "source": [
-    "assert len(names()) == 4, \"There are four names in the simple_string\"\n"
+    "assert len(names()) == 4, \"There are four names in the simple_string\""
    ]
   },
   {
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -174,20 +173,12 @@
     "    string_list = ' '.join(b_list)\n",
     "    pattern2 = '([A-Z][a-z]* [A-Z][a-z]*)'\n",
     "    names_b_list = re.findall(pattern2, string_list)\n",
-    "    return names_b_list\n",
-    "    "
+    "    return names_b_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -203,7 +194,7 @@
    },
    "outputs": [],
    "source": [
-    "assert len(grades()) == 16\n"
+    "assert len(grades()) == 16"
    ]
   },
   {
@@ -240,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -269,14 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -298,15 +282,8 @@
     "  'user_name': 'feest6811',\n",
     "  'time': '21/Jun/2019:15:45:24 -0700',\n",
     "  'request': 'POST /incentivize HTTP/1.1'}\n",
-    "assert one_item in logs(), \"Sorry, this item should be in the log results, check your formating\"\n"
+    "assert one_item in logs(), \"Sorry, this item should be in the log results, check your formating\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -330,7 +307,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "47bad14beceb6a9ba4f8ec41a71a990a63ca5a696a9b27ae577034193b9cb313"
+   }
   }
  },
  "nbformat": 4,
