--- a/python/Coursera/1 Intro to Data Science/Assignments/Assignment 2/assignment2.ipynb
+++ b/python/Coursera/1 Intro to Data Science/Assignments/Assignment 2/assignment2.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -85,14 +85,12 @@
     "    poe[\"college\"] = np.sum(mother_educ == 4)/len(mother_educ)\n",
     "    \n",
     "    return poe\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    "
+    "    raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -115,7 +113,7 @@
     "assert \"less than high school\" in proportion_of_education().keys(), \"You have not returned a dictionary with the correct keys.\"\n",
     "assert \"high school\" in proportion_of_education().keys(), \"You have not returned a dictionary with the correct keys.\"\n",
     "assert \"more than high school but not college\" in proportion_of_education().keys(), \"You have not returned a dictionary with the correct keys.\"\n",
-    "assert \"college\" in proportion_of_education().keys(), \"You have not returned a dictionary with the correct keys.\"\n"
+    "assert \"college\" in proportion_of_education().keys(), \"You have not returned a dictionary with the correct keys.\""
    ]
   },
   {
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -197,7 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "assert len(average_influenza_doses())==2, \"Return two values in a tuple, the first for yes and the second for no.\"\n"
+    "assert len(average_influenza_doses())==2, \"Return two values in a tuple, the first for yes and the second for no.\""
    ]
   },
   {
@@ -229,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -284,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -300,7 +298,7 @@
    },
    "outputs": [],
    "source": [
-    "assert len(chickenpox_by_sex())==2, \"Return a dictionary with two items, the first for males and the second for females.\"\n"
+    "assert len(chickenpox_by_sex())==2, \"Return a dictionary with two items, the first for males and the second for females.\""
    ]
   },
   {
@@ -319,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -380,13 +378,6 @@
    "source": [
     "assert -1<=corr_chickenpox()<=1, \"You must return a float number between -1.0 and 1.0.\"\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -412,7 +403,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "47bad14beceb6a9ba4f8ec41a71a990a63ca5a696a9b27ae577034193b9cb313"
+   }
   }
  },
  "nbformat": 4,
