--- a/python/Coursera/1 Intro to Data Science/Assignments/Assignment 4/assignment4.ipynb
+++ b/python/Coursera/1 Intro to Data Science/Assignments/Assignment 4/assignment4.ipynb
@@ -321,25 +321,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "checksum": "cda33b094ba19ccc37a481e0dd29e0bc",
-     "grade": true,
-     "grade_id": "cell-764d4476f425c5a2",
-     "locked": true,
-     "points": 20,
-     "schema_version": 1,
-     "solution": false
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -436,25 +417,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "checksum": "e9415d6399aa49e3a1a60813afdefa3b",
-     "grade": true,
-     "grade_id": "cell-de7b148b9554dbda",
-     "locked": true,
-     "points": 20,
-     "schema_version": 1,
-     "solution": false
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -537,25 +499,6 @@
     "    #assert abs(p_values.loc[\"MLB\", \"NFL\"] - 0.80) <= 1e-2, \"The MLB-NFL p-value should be around 0.80\"\n",
     "    return p_values"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "checksum": "2a596ab421a45cc01168d10e8fbb8f89",
-     "grade": true,
-     "grade_id": "cell-fb4b9cb5ff4570a6",
-     "locked": true,
-     "points": 20,
-     "schema_version": 1,
-     "solution": false
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -579,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
