--- a/python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.ipynb
+++ b/python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -308,7 +308,7 @@
    "part_id": "Msnj0"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -322,11 +322,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d03e573af703c4891463f60b705e808eb96306e50f2ba6f732dc4ef07e068dbc"
+    "hash": "47bad14beceb6a9ba4f8ec41a71a990a63ca5a696a9b27ae577034193b9cb313"
    }
   }
  },
