--- a/python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.ipynb
+++ b/python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.ipynb
@@ -194,13 +194,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ticket_id\n",
+       "284932    0.061785\n",
+       "285362    0.022674\n",
+       "285361    0.071055\n",
+       "285338    0.061785\n",
+       "285346    0.071055\n",
+       "            ...   \n",
+       "376496    0.022674\n",
+       "376497    0.022674\n",
+       "376499    0.071055\n",
+       "376500    0.071055\n",
+       "369851    0.300441\n",
+       "Length: 61001, dtype: float32"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#blight_model()"
+    "blight_model()"
    ]
   }
  ],
@@ -226,11 +249,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d03e573af703c4891463f60b705e808eb96306e50f2ba6f732dc4ef07e068dbc"
+    "hash": "47bad14beceb6a9ba4f8ec41a71a990a63ca5a696a9b27ae577034193b9cb313"
    }
   }
  },
