--- a/python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.ipynb
+++ b/python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.ipynb
@@ -102,20 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dlim\\AppData\\Local\\Temp\\ipykernel_25872\\3236873118.py:57: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Don\\AppData\\Local\\Temp\\ipykernel_27152\\3236873118.py:57: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  output = df1.append(df2[~df2.level_0.isin(df1.level_0)])\n",
-      "C:\\Users\\dlim\\AppData\\Local\\Temp\\ipykernel_25872\\3236873118.py:59: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Don\\AppData\\Local\\Temp\\ipykernel_27152\\3236873118.py:59: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  output = output.append(df3[~df3.level_0.isin(output.level_0)])\n",
-      "C:\\Users\\dlim\\AppData\\Local\\Temp\\ipykernel_25872\\3236873118.py:61: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Don\\AppData\\Local\\Temp\\ipykernel_27152\\3236873118.py:61: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  output = output.append(df4[~df4.level_0.isin(output.level_0)])\n",
-      "C:\\Users\\dlim\\AppData\\Local\\Temp\\ipykernel_25872\\3236873118.py:63: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Don\\AppData\\Local\\Temp\\ipykernel_27152\\3236873118.py:63: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  output = output.append(df5[~df5.level_0.isin(output.level_0)])\n"
      ]
     }
@@ -220,20 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after function definition on line 1 (2214263165.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [20]\u001b[1;36m\u001b[0m\n\u001b[1;33m    import numpy as np\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after function definition on line 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def date_sorter():\n",
     "    \n",
@@ -339,20 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dlim\\AppData\\Local\\Temp\\ipykernel_25872\\466805847.py:60: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Don\\AppData\\Local\\Temp\\ipykernel_27152\\466805847.py:60: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  output = df1.append(df2[~df2.level_0.isin(df1.level_0)])\n",
-      "C:\\Users\\dlim\\AppData\\Local\\Temp\\ipykernel_25872\\466805847.py:62: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Don\\AppData\\Local\\Temp\\ipykernel_27152\\466805847.py:62: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  output = output.append(df3[~df3.level_0.isin(output.level_0)])\n",
-      "C:\\Users\\dlim\\AppData\\Local\\Temp\\ipykernel_25872\\466805847.py:64: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Don\\AppData\\Local\\Temp\\ipykernel_27152\\466805847.py:64: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  output = output.append(df4[~df4.level_0.isin(output.level_0)])\n",
-      "C:\\Users\\dlim\\AppData\\Local\\Temp\\ipykernel_25872\\466805847.py:66: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\Don\\AppData\\Local\\Temp\\ipykernel_27152\\466805847.py:66: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  output = output.append(df5[~df5.level_0.isin(output.level_0)])\n"
      ]
     },
@@ -373,7 +364,7 @@
        "Name: level_0, Length: 500, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
