--- a/python/Coursera/4 Applied Text Mining/Week 3/Assignment/Assignment+3.ipynb
+++ b/python/Coursera/4 Applied Text Mining/Week 3/Assignment/Assignment+3.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
        "9  Had your mobile 11 months or more? U R entitle...       1"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -188,7 +188,7 @@
        "13.406317300789663"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +224,7 @@
     "    import numpy as np\n",
     "    \n",
     "    vect = CountVectorizer().fit(X_train)\n",
-    "    token = np.array(vect.get_feature_names())\n",
+    "    token = np.array(vect.get_feature_names_out())\n",
     "    max_word = 'a'\n",
     "    \n",
     "    for word in token:\n",
@@ -235,26 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\dlim\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'com1win150ppmx3age16subscription'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -301,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -312,7 +304,7 @@
        "0.9720812182741116"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +346,7 @@
     "    X_train_vectorized = vect.transform(X_train)\n",
     "    model = MultinomialNB(alpha=0.1)\n",
     "    model.fit(X_train_vectorized, y_train)\n",
-    "    feature_names = np.array(vect.get_feature_names())\n",
+    "    feature_names = np.array(vect.get_feature_names_out())\n",
     "    sorted_tfidf_index = X_train_vectorized.max(0).toarray()[0].argsort()\n",
     "    \n",
     "    small_index = feature_names[sorted_tfidf_index[:20]]\n",
@@ -378,14 +370,6 @@
     "collapsed": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\dlim\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -511,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -525,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -536,7 +520,7 @@
        "(71.02362694300518, 138.8661311914324)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -586,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -611,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -622,7 +606,7 @@
        "0.9661689557407943"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -662,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -673,7 +657,7 @@
        "(0.2992746113989637, 15.759036144578314)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -733,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -742,7 +726,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\dlim\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:444: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "c:\\Users\\Don\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
@@ -758,7 +742,7 @@
        "0.9759031798040846"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -801,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -812,7 +796,7 @@
        "(17.29181347150259, 29.041499330655956)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -859,7 +843,7 @@
     "def answer_eleven():\n",
     "    from sklearn.feature_extraction.text import CountVectorizer\n",
     "    import re\n",
-    "    vectorizer = CountVectorizer(min_df=5, analyzer='char_wb', ngram_range=[2,5])\n",
+    "    vectorizer = CountVectorizer(min_df=5, analyzer='char_wb', ngram_range=(2,5))\n",
     "    X_train_transformed = vectorizer.fit_transform(X_train)\n",
     "    \n",
     "    X_train_transformed_with_length = add_feature(X_train_transformed, [X_train.str.len(),\n",
@@ -876,7 +860,7 @@
     "    model.fit(X_train_transformed_with_length,y_train)\n",
     "    \n",
     "    predictions = model.predict(X_test_transformed_with_length)\n",
-    "    feature_names = np.array(vectorizer.get_feature_names()+ ['length_of_doc', 'digit_count', 'non_word_char_count'])\n",
+    "    feature_names = np.array(vectorizer.get_feature_names_out())\n",
     "    \n",
     "    sorted_coef_index = model.coef_[0].argsort() \n",
     "    small_coefficient = list(feature_names[sorted_coef_index[:10]])\n",
@@ -887,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -896,29 +880,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\dlim\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:444: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "c:\\Users\\Don\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
       "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "c:\\Users\\dlim\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "(0.9813973821367333,\n",
-       " ['..', '. ', ' i', ' go', ' y', '? ', 'pe', 'go', 'ca', 'h '],\n",
-       " ['digit_count', 'co', 'ne', 'ww', 'ar', 'ia', ' ch', 'xt', 'mob', 'eply '])"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "index 16315 is out of bounds for axis 0 with size 16314",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[53], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m answer_eleven()\n",
+      "Cell \u001b[1;32mIn[52], line 25\u001b[0m, in \u001b[0;36manswer_eleven\u001b[1;34m()\u001b[0m\n\u001b[0;32m     23\u001b[0m sorted_coef_index \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mcoef_[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39margsort() \n\u001b[0;32m     24\u001b[0m small_coefficient \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(feature_names[sorted_coef_index[:\u001b[39m10\u001b[39m]])\n\u001b[1;32m---> 25\u001b[0m large_coefficient \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(feature_names[sorted_coef_index[:\u001b[39m-\u001b[39;49m\u001b[39m11\u001b[39;49m:\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m]])\n\u001b[0;32m     27\u001b[0m \u001b[39mreturn\u001b[39;00m roc_auc_score(y_test, predictions),small_coefficient,large_coefficient\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 16315 is out of bounds for axis 0 with size 16314"
+     ]
     }
    ],
    "source": [
@@ -934,7 +916,7 @@
    "part_id": "ctlgo"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -948,11 +930,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d03e573af703c4891463f60b705e808eb96306e50f2ba6f732dc4ef07e068dbc"
+    "hash": "47bad14beceb6a9ba4f8ec41a71a990a63ca5a696a9b27ae577034193b9cb313"
    }
   }
  },
