--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -168,6 +168,6 @@ Technical languages: Python (regex, numpy, pandas, scikit-learn, matplotlib, nlt
 
 Statistical techniques: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit \\
 
-ML models: Gradient descent, random forest, decision tree, SVC, linear, Lasso, naive Bayes, clustering
+ML models: Gradient descent, random forest, decision tree, SVC, linear, Lasso, KNN, naive Bayes, clustering
 
 \end{document}
