--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -83,15 +83,19 @@
     \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{donlim93.github.io} \\
 \end{center}
 %==== Experience ====%
+
 \header{Work and Research Experience}
+\textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
+\textit{Sales and Marketing Analyst} \hfill May 2023 --- Present \\
+
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
-\textit{Support Engineer} \hfill June 2022 --- Present \\
+\textit{Support Engineer} \hfill June 2022 --- May 2023 \\
 \begin{itemize}
     \item Troubleshooting automated workflows and forms processes; maintaining non-clustered SQL databases; administering folder-, document-, and user-level security; internal IT support
 \end{itemize}    
 
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
-\textit{Research Assistant} \hfill Aug 2020 --- May 2022 \\
+\textit{Economic Research Assistant} \hfill Aug 2020 --- May 2022 \\
 \begin{itemize}
     \item Edited and revised book chapters and journal articles; compiled relevant literature for publications
 \end{itemize}
@@ -123,7 +127,7 @@
 \textbf{Texas Tech University Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
 \textit{M.S. Agricultural and Applied Economics}; 3.595 GPA \hfill May 2022 \\
 \begin{itemize}
-    \item Relevant Coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
+    \item Relevant coursework: Causal Inference (R, Stata), Economic Optimization and Machine Learning (Matlab, Python), Applied Econometrics I (Python, Matlab, R), Applied Econometrics II (SAS), Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
 \end{itemize}
 
 \textbf{CEVRO Institute School of Political Studies}\hfill Prague, Czech Republic\\
@@ -155,11 +159,11 @@ State Policy Network Generation Liberty Fellow \hfill Colorado Springs, CO | Oct
 
 Epistemological and Methodological Approaches in Science \hfill Tallahassee, FL | Aug 2018\\
 
-Freidrich Naumann Stiftung Seminar \hfill Gummersbach, Germany | Jul 2018 \\
+Friedrich-Naumann-Stiftung f\"{u}r die Freiheit Seminar \hfill Gummersbach, Germany | Jul 2018 \\
 
 European Journalism Institute Program \hfill Prague, Czech Republic | Jul 2018 \\
 
-Koch Internship Program \hfill Online | Jan 2016 --- May 2017
+Koch Fellowship Program (concurrent with Commonwealth Foundation) \hfill Online | Jan 2016 --- May 2017
 
 \vspace{1mm}
 %==== Skills ====%
@@ -168,6 +172,6 @@ Technical languages: Python (regex, numpy, pandas, scikit-learn, matplotlib, nlt
 
 Statistical techniques: OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, Mahalanobis distance, kernel, entropy, nearest-neighbor), synthetic control, event study, factor and cluster analysis, logit/probit \\
 
-ML models: Gradient descent, random forest, decision tree, SVC, linear, Lasso, KNN, naive Bayes, clustering
+ML models: Gradient descent, random forest, decision tree, SVC, linear, lasso, KNN, na\"{i}ve Bayes, clustering
 
 \end{document}
