--- a/python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.ipynb
+++ b/python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.ipynb
@@ -15,13 +15,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/garimag2/Applied-Machine-Learning-in-Python/blob/master/Assignment%2B3.ipynb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Assignment 3 - Evaluation\n",
     "\n",
     "In this assignment you will train several models and evaluate how effectively they predict instances of fraud using data based on [this dataset from Kaggle](https://www.kaggle.com/dalpozz/creditcardfraud).\n",
@@ -122,6 +115,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9852507374631269, 0.0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer_two()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -153,6 +166,26 @@
     "    precision = precision_score(y_test,y_pred)\n",
     "    \n",
     "    return (accuracy, recall, precision)# Return your answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9900442477876106, 0.35, 0.9333333333333333)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer_three()"
    ]
   },
   {
